# k

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION_SUMMARY.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  index.html  package.json
backend/: MODAL_DEPLOYMENT.md  modal_app.py  pyproject.toml
backend/api/: .gitkeep
backend/middleware/: .gitkeep
backend/models/: .gitkeep
backend/server/: app.py  requirements.txt
backend/server/templates/: .gitkeep
backend/src/: config.py
docs/api/: README.md
docs/arch/design/: FIGMA-WORKFLOW.md  figma-tokens.json
docs/arch/design/flowcharts/: README.md
docs/deployment/: README.md
frontend/public/: home-1.html  service.html
frontend/public/css/: style.css
frontend/public/css/fonts/: .gitkeep
frontend/public/img/team/: .gitkeep
frontend/public/js/: asl.js  chat.js  config.js  detect.js
frontend/public/js/utils/: .gitkeep
frontend/views/: .gitkeep
ml notbooks/: model(3)(1).ipynb  model.ipynb
