[project]
name = "empowerwork-backend"
version = "1.0.0"
description = "EmpowerWork ASL Detection Backend"
requires-python = ">=3.10"

dependencies = [
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "python-dotenv==1.0.0",
    "opencv-python==4.8.1.78",
    "mediapipe==0.10.8",
    "numpy==1.26.2",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "black>=23.12.0",
    "flake8>=6.1.0",
]

